--- a/_posts/2019-07-16-latex.md
+++ b/_posts/2019-07-16-latex.md
@@ -1,6 +1,6 @@
 ---
 date: 2017-01-16
-title: LaTex Basic
+title: Why LaTeX?
 categories:
   - Documentation
 description: LaTeX basic for proper documentation
@@ -32,5 +32,7 @@ Once we have written the content of out document, we can change its appearance w
 ![Example image](https://images.ctfassets.net/nrgyaltdicpt/6gsvc5Ogjmu04I4Miu0uGg/cb1d4391717d2ab8d5e42ede6fb0eef1/overleaf_wide_colour_light_bg.png)
 
 
+
+> In next post, we will work on creating some LaTeX contents.
 
 
