--- a/_posts/2019-07-31-cssheart.md
+++ b/_posts/2019-07-31-cssheart.md
@@ -1,13 +1,11 @@
 ---
 date: 2019-07-31
-title: CSS: Heart
+title: Heart in CSS?
 categories:
-  - CSS Tricks
-description: Creating Heart using CSS.
+  - CSS
+description: CSS Tricks for Heart 
 type: Document
 ---
-
-
 
 # Heart in CSS
 CSS stands as Cascading Style Sheets  which is  a complex language that packs quite a bit of power and assist HTML.It allows us to add layout and design to our pages, and it allows us to share those styles from element to element and page to page. It  gives you the power of visualization at exact points.(How? New Post coming soon!)
@@ -29,12 +27,12 @@ We will use 1 square and 2 circle to create heart.
 
 Now,
 Open any text editors like Atom,notepad: Say Sublime 
- and type the following code.
+and type the following code.
 ```HTML
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Heart</title>
+<title>Heart</title>
 </head>
 <body>
 
@@ -60,16 +58,16 @@ Here, for simplicity and as we have less css contain we will use internal  CSS u
 
 ``` CSS
 div.heart{
-		display: block;
-		margin:100px;
-		width: 100px;
-		height: 100px;
-		background-color: red ;
-		position: relative;
-		transform: rotateZ(-45deg);
+display: block;
+margin:100px;
+width: 100px;
+height: 100px;
+background-color: red ;
+position: relative;
+transform: rotateZ(-45deg);
 
 
-	}
+}
 
 ```
 
@@ -87,17 +85,17 @@ Lets add the following code just below the previous css.
 
 ```CSS
 
-	div.heart:after,
-	div.heart:before{
-		display: block;
-		content:'';
-		width: 100px;
-		height: 100px;
-		background-color: red;
-		border-color: blue;
-		border-radius: 50px;
-		position: absolute; 
-	}
+div.heart:after,
+div.heart:before{
+display: block;
+content:'';
+width: 100px;
+height: 100px;
+background-color: red;
+border-color: blue;
+border-radius: 50px;
+position: absolute; 
+}
 
 
 
@@ -107,15 +105,15 @@ Lets add the following code just below the previous css.
 And lets add next code block
 
 ```CSS
-	div.heart:after{
-		top: -50px;
-		left:0;
-	}
+div.heart:after{
+top: -50px;
+left:0;
+}
 
-	div.heart:before{
-		top:0;
-		left: 50px;
-	}
+div.heart:before{
+top:0;
+left: 50px;
+}
 
 ```
 
@@ -132,43 +130,43 @@ So the final code will look like:
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Heart</title>
+<title>Heart</title>
 
 
 <style type="text/css">
-	div.heart{
-		display: block;
-		margin:100px;
-		width: 100px;
-		height: 100px;
-		background-color: red ;
-		position: relative;
-		transform: rotateZ(-45deg);
+div.heart{
+display: block;
+margin:100px;
+width: 100px;
+height: 100px;
+background-color: red ;
+position: relative;
+transform: rotateZ(-45deg);
 
 
-	}
+}
 
 
-	div.heart:after,
-	div.heart:before{
-		display: block;
-		content:'';
-		width: 100px;
-		height: 100px;
-		background-color: red;
-		border-color: blue;
-		border-radius: 50px;
-		position: absolute; 
-	}
-	div.heart:after{
-		top: -50px;
-		left:0;
-	}
+div.heart:after,
+div.heart:before{
+display: block;
+content:'';
+width: 100px;
+height: 100px;
+background-color: red;
+border-color: blue;
+border-radius: 50px;
+position: absolute; 
+}
+div.heart:after{
+top: -50px;
+left:0;
+}
 
-	div.heart:before{
-		top:0;
-		left: 50px;
-	}
+div.heart:before{
+top:0;
+left: 50px;
+}
 </style>
 
 
